# inferCNAsc

./: .gitignore  README.md  structure.txt
infercnasc_rs/: Cargo.toml
notebooks/: finalcode.ipynb  finalcode_amyedit_v2.ipynb  finalcode_amyedit_v2.py
py/: infer.py  io.py
